Prevent scrolling out of bounds

--- a/homepage/static/css/style.css
+++ b/homepage/static/css/style.css
@@ -48,6 +48,17 @@ a {
     color: var(--text);
 }
 
+.scroller-svg-div {
+    left: 50%;
+    bottom: 10%;
+    position: fixed;
+}
+
+.scroller-svg {
+    width: 12vh;
+    height: 12vh;
+}
+
 .svg-link {
     color: var(--text);
     text-decoration: none;
